<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_navigation">Navigation</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="College">Our College</string>
    <string name="Colleges">College</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">G Mate</string>
    <string name="emailme">anooppkrishnan96@gmail.com</string>
    <string name="email">principal@gecskp.ac.in </string>
    <string name="logo">logo</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="DigitalDiary">Digital Diary</string>
    <string name="info">Info</string>
    <string name="aboutus">About us</string>
    <string name="train">Train Tme</string>
    <string name="BusTime">Bus Time</string>
    <string name="LocalNumbers">Phone Numbers</string>
    <string name="copy">© Copy Right Anoop P</string>
    <string name="developer">Developer</string>
    <string name="ANOOP">ANOOP P</string>
    <string name="name">Name</string>
    <string name="time">Time</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="Hospital">Hospitals</string>
    <string name="PanchayathOffice">Sreekrishnapuram</string>
    <string name="gec">G E C  Sreekrishnapuram</string>
    <string name="feedback">Feedback</string>
    <string name="CollegeWebsite">College Website</string>
    <string name="CollegeMagazine">College Magazine</string>
    <string name="pkdRoute">Palakkad Route</string>>
    <string name="skpRoute">Sreekrishnapuram Route</string>>
    <string name="HospitalNumbers">Hospital Numbers</string>
    <string name="GecSreekrishnapuram">Gec Sreekrishnapuram</string>
    <string name="version">Version  1.0</string>
    <string name="ToPalakkad">To \n Palakkad</string>
    <string name="Palakkad">Palakkad</string>
    <string name="Shornur">Shornur</string>
    <string name="Pattambi">Pattambi</string>
    <string name="PoliceStation">Police Stations</string>
    <string name="Toskp">To \n Sreekrishnapuram</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navgation">Navgation</string>


    <string name="venue">Venue: Government Engineering College\n          Sreekrishnapuram,Palakkad</string>
    >


    <string name="quickstart_message">Click the SUBSCRIBE TO NEWS button below to subscribe to the
        news topic. Messages sent to the news topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_news">Subscribe To News</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="msg_subscribe_failed">Failed to subscribe to news topic</string>


    <string name="music_desc">Organized for the students with an exemplary talent and
        interest for music, the music club has proven to be a platform for showcasing
        the sound and vibe of the college through music
        shows and an extra ordinary band.</string>

    <string name="dance_desc">With a noticeable number of talented
        members, the dance club has never failed to define the beat
        and rhythm of the college with its incredible dance crew.</string>
    <string name="beuaty_desc">The beautification crew serves its
        purpose by furbishing the campus with never before
        seen ideas and innovations.</string>
    <string name="drama_desc">The drama club was organized for
        the students with similar interests and passion to express
        themselves in various fields of drama, and the members have
        excelled themselves with constant practice and perfection.</string>
    <string name="media_desc">The media team has strived to express the heart and
        soul of our college to the world and thereby open a portal of opportunities
        for the students.</string>
    <string name="design_desc">With a wide range of
        innovative designs and creations, the design team holds
        the biggest number of extremely talented members to support
        its cause.</string>
    <string name="dormitory_desc">The Mens Hostel is a dormitory providing comfortable accommodation near the campus</string>
    <string name="general_store_desc">General Store provides the 
        students with record books\nand other supplies necessary for their course.</string>
    <string name="canteen_desc">A place in college where food and
        meals are sold,\n often at a lower than usual price.</string>
    <string name="ccf_desc">Central Computing Facility(CCF) is a centralized Computing Centre for the Staff and students of this college. CCF is maintaining and managing the campus networking and Internet facility</string>
    <string name="mens_hostel">Where male wards could take admission \nfor food and accommodation.</string>

    <string name="womens_hostel">Where female wards could take admission \nfor food and accommodation.</string>


    <string name="Itnetlab">Helpful to develop network applications, configure new device etc. The lab is dedicated for computer networking using specialized devices.\n
                Lab In Charge:Sulfikar.S, Shameer.A.N</string>

    <string name="Itaplab">Helpful in advanced programming and is useful for the research and development activities of the department.</string>

    <string name="dormitory">Priority 1 : \n20% of the total seats should be alloted to students belonging to the
categories of SC/ST/PH/BPL/Other States/Government of India Nominees
irrespective of semester.\nPriority 2: \nThe remaining seats after allotment under Priority -1 above , shall be
Alloted among the students as follows*\n
a) 30% of seats to first year students\n
b) 30% of seats to final year\nc) 20% of seats to 3rd and 4th years\n
d) 10% of seats to second years\n
e) 5% of seats to first year PG students\n
f) 5% of seats to second year PG students\n*(on the basis of merit and distance)</string>


    <string name="sports_desc">Sports club is successfully running to enhance
        the spirit of sports and to improve the talents of every GECians.
        Special coachings are conducting by experts for every students.
        College has its own cricket team, football team, basketball team,
        volleyball team and badminton team. Coaching for volleyball,
        basketball and badminton are given to boys as well as girls. College
        football team, Basket ball team and volleyball team had proven their spirit
        and abilities in previous university and inter college matches.</string>

    <string name="che_lab_desc">The research laboratories in which the B-tech
        chemistry students arecarried out in our college are quite well equipped.
        There is a perfect environment of social, sportive and educational purposes
        for students to use. It gains exposure to chemical reactions, materials and
        equipments. So during hand on chemical activities students need to pay immense
        discipline and should safety deal with lab apparatus and instruments.\n\nRecord :
        Without Graph\n\nFaculties:\nSeema 8921902235\n</string>
    <string name="phy_lab_desc">Physics lab aids students in establishing reference of theory.
        There is a range of lab equipments where students need to remain patient and disciplined while
        taking observation and during the calculation.\n\nRecord :
        Any neat note book\n\nfaculties:\nJamshad Ali  9846272290</string>
    <string name="civil_lab">It helps the student to deal with practical problems and provide a brief introduction using a wide range of equipments.\n\nRecord : With Graph\n\nFaculties:\nAneesh Kumar  9446148112</string>
</resources>


