<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="5sp"
    android:paddingLeft="1sp"
    android:paddingStart="1sp"
    android:paddingRight="5sp"
    android:paddingEnd="5sp"
    android:paddingTop="0sp"
    android:background="@drawable/back"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:src="@drawable/ch3"
        android:contentDescription="@string/logo"
        android:layout_weight="1.0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="0dp"
        android:paddingLeft="2sp"
        android:paddingStart="1sp"
        android:paddingRight="5sp"
        android:paddingEnd="5sp"
        android:text="@string/GecSreekrishnapuram"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="2sp"
        android:paddingStart="1sp"
        android:paddingRight="5sp"
        android:paddingEnd="5sp"
        android:text="@string/email" />

</LinearLayout>
